<resources>
    <string name="app_name">一起考研吧</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_postDetail">帖子详情</string>
    <string name="title_activity_create_new_post">新建帖子</string>
    <string name="title_activity_clock_in">打卡</string>
    <string name="title_activity_mine_collectionList">收藏列表</string>

    <string name="text_login_hint">请先登录</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码 </string>
    <string name="prompt_user_name" >用户名</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="action_login">登录</string>
    <string name="trans_activity_login">前往登录</string>
    <string name="action_register">注册</string>
    <string name="trans_activity_register">没有账号，注册一个</string>
    <string name="action_logout">注销</string>
    <string name="error_invalid_email">邮箱不可用!</string>
    <string name="error_invalid_password">密码过于简单！</string>
    <string name="error_incorrect_password">密码错误！</string>
    <string name="error_field_required">此字段必填！</string>
    <string name="button_mine_radio">个人中心</string>
    <string name="button_square_radio">广场</string>
    <string name="button_message_radio">消息</string>
    <string name="button_post_radio">帖子管理</string>
    <string name="button_change_user_info">修改个人信息</string>
    <string name="button_clockIn">打卡</string>
    <string name="prompt_male">男</string>
    <string name="prompt_female">女</string>
    <string name="prompt_targetProfession">目标专业</string>
    <string name="prompt_targetSchool">目标学校</string>
    <string name="button_confirm">确认提交</string>
    <string name="button_create_comment_action">添加评论</string>
    <string name="button_admire">点赞</string>
    <string name="button_collect">收藏</string>
    <string name="button_delete_post">删除</string>
    <string name="button_confirm_create_new_post">发帖</string>
    <string name="button_mine_collections">我的收藏</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
